force-app/main/default/objects/Market__c/fields/Add_New_Accounts_to_PSA__c.field-meta.xml
<CustomField>
    <fullName>Add_New_Accounts_to_PSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add New Accounts to PSA</label>
    <type>Checkbox</type>
</CustomField>