force-app/main/default/objects/Market__c/fields/Agreement_Configure_Payments__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Configure_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Configure Payments</label>
    <type>Checkbox</type>
</CustomField>