force-app/main/default/objects/Market__c/fields/Agreement_Requires_Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Requires_Wholesaler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Requires Wholesaler</label>
    <type>Checkbox</type>
</CustomField>