force-app/main/default/objects/Market__c/fields/Can_PreDate_PSA__c.field-meta.xml
<CustomField>
    <fullName>Can_PreDate_PSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can PreDate PSA</label>
    <type>Checkbox</type>
</CustomField>