force-app/main/default/objects/Market__c/fields/Can_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Can_Update_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Update Status</label>
    <type>Checkbox</type>
</CustomField>