force-app/main/default/objects/Market__c/fields/Capture_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Capture_Activity_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture Activity Type</label>
    <type>Checkbox</type>
</CustomField>