force-app/main/default/objects/Market__c/fields/Capture_PSA_Free_Goods__c.field-meta.xml
<CustomField>
    <fullName>Capture_PSA_Free_Goods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture PSA Free Goods</label>
    <type>Checkbox</type>
</CustomField>