force-app/main/default/objects/Market__c/fields/Maximum_Agreement_Length__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Agreement_Length__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Maximum Agreement Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>