force-app/main/default/objects/Market__c/fields/Promotional_On_Premise_Target_ROI__c.field-meta.xml
<CustomField>
    <fullName>Promotional_On_Premise_Target_ROI__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Promotional On Premise Target ROI</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>