force-app/main/default/objects/Market__c/fields/Show_Item_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Show_Item_Gross_Profit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Item Gross Profit</label>
    <type>Checkbox</type>
</CustomField>