force-app/main/default/objects/Market__c/fields/Show_Person_in_Charge_Details__c.field-meta.xml
<CustomField>
    <fullName>Show_Person_in_Charge_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Person in Charge Details</label>
    <type>Checkbox</type>
</CustomField>