force-app/main/default/objects/Market__c/fields/Validate_Actual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Validate_Actual_Volume__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validate Actual Volume against Planned Volume</description>
    <label>Validate Actual Volume</label>
    <type>Checkbox</type>
</CustomField>