force-app/main/default/objects/Market__c/fields/Validate_Budget_vs_Planned__c.field-meta.xml
<CustomField>
    <fullName>Validate_Budget_vs_Planned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Budget vs Planned</label>
    <type>Checkbox</type>
</CustomField>